<resources>
    <string name="app_name" translatable="false">Birthday Reminder Generator</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading_wait">Loading&#8230;</string>
    <string name="loading_pictures">Loading pictures&#8230;</string>
    <string name="update_reminders">Update reminders&#8230;</string>
    <string name="update_reminders_title">Update all reminders</string>
    <string name="update_reminders_question">Do you want to update reminders for all contacts?</string>
    <string name="filter">Filter</string>
    <string name="filtering">Filtering&#8230;</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="contact_image" translatable="false">[ ]</string>
    <string name="icon_checkbox" translatable="false">[ ]</string>
    <string name="no_contacts">You don\'t have contacts</string>
    <string name="contacts_loaded">Were loaded %d contacts</string>
    <string name="loading_birthdays">Loading birthdays&#8230;</string>
    <string name="no_birthdays">Your contacts do not contain birthdays</string>
    <string name="birthdays_loaded">Were loaded %d birthdays</string>
    <string name="no_calendar">No access to any calendar to update reminders.</string>
    <string name="no_calendar_access">No access to any calendar to get reminders.</string>
    <string name="select_a_calendar">Select a calendar from settings first!</string>
    <string name="reminder_deleted">Deleted one reminder.</string>
    <string name="reminders_deleted">Deleted %d reminders.</string>
    <string name="reminder_inserted">Inserted one reminder.</string>
    <string name="reminders_inserted">Inserted %d reminders.</string>
    <string name="reminder_updated">Updated one reminder.</string>
    <string name="reminders_updated">Updated %d reminders.</string>
    <string name="birthday_updated">Birthday updated.</string>
    <string name="no_changes">No update was required.</string>
    <string name="birthdays_not_loaded">Contacts birthdays are not loaded yet, try again later!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="attention">Attention:</string>
    <string name="information">Information:</string>
    <string name="error_occurred">An error occurred:</string>
    <string name="no_birthday_for">The contact: %s don\'t have birthday informations!</string>
    <string name="remove_contact_birthday_title">Remove Contact Birthday</string>
    <string name="remove_contact_birthday_question">Do you want to remove birthday informations for the contact: %s?</string>
    <string name="contact_birthday_removed">Contact birthday removed successfully!</string>
    <string name="contact_birthday_not_removed">No birthday removed for contact: %s.</string>
    <string name="sync_in_progress">Synchronize contacts with reminders&#8230;</string>
    <string name="sync_confirmation_title">Synchronize contacts reminders</string>
    <string name="sync_confirmation_question">Do you want to synchronize contacts with existing reminders?\nNote, the existing reminders are recognized by the reminder title format.</string>
    <string name="sync_no">No contact have reminders!</string>
    <string name="sync_one">One contact have a reminder.</string>
    <string name="sync_more">%d contacts have reminders.</string>
    <string name="age">Age: %d</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="action_back">Back</string>
    <string name="action_update_reminders">Update all reminders</string>
    <string name="action_sync">Synchronize reminders</string>
    <string name="action_reload">Reload</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string-array name="contact_item">
        <item>Edit Birthday</item>
        <item>Remove Birthday</item>
        <item>Edit Contact</item>
        <item>Update reminder</item>
        <item>Remove reminder</item>
    </string-array>
    <string-array name="contact_item_no_birthday">
        <item>Add Birthday</item>
        <item>Edit Contact</item>
    </string-array>
    <string-array name="contact_picture">
        <item>Call</item>
        <item>Send Birthday SMS</item>
    </string-array>
    <string-array name="slide_menu_items">
        <item>Contacts</item>
        <item>Birthdays</item>
        <item>Settings</item>
        <item>About</item>
        <item>License</item>
    </string-array>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_month">This month</string>
    <string name="next_month">Next month</string>
    <string name="general_settings">General settings</string>
    <string name="reminder_settings">Reminder settings</string>
    <string name="settings">Settings</string>
    <string name="str_dateFormat">Date format from database.</string>
    <string name="str_displayDateFormat">Display date format</string>
    <string name="str_calendar">Select calendar for reminders</string>
    <string name="select_calendar">Where will be created reminders</string>
    <string-array name="choose_calendar">
        <item>No calendar support</item>
    </string-array>
    <string-array name="choose_calendar_values">
        <item>none</item>
    </string-array>
    <string name="sms_template_title">SMS Template</string>
    <string name="sms_template_desc">Define a template for birthday\'s messages</string>
    <string name="sms_template_model">Happy Birthday, %s!\nI wish you the best birthday ever!</string>
    <string name="phone_select">Select a phone number:</string>
    <string name="phone_list_empty">Your contact %s do not have a phone number!</string>
    <string name="phone_error_call">Cannot make the call to number: %1$s, error: %2$s</string>
    <string name="phone_error_sms">Cannot send the SMS to number: %1$s, error: %2$s</string>
    <string name="str_reminderTitleFormat">Reminder title format</string>
    <string name="str_reminderDescriptionFormat">Reminder description format</string>
    <string name="str_isAllDay">Is all day reminder?</string>
    <string name="str_isAllDaySummary">Define the reminder valability during all day</string>
    <string name="displayDateFormat">yyyy-MM-dd</string>
    <string name="reminderTitleFormat">%s\'s birthday</string>
    <string name="reminderDescriptionFormat">Today is %s\'s birthday!</string>
    <string name="time_title">Reminder start and end times</string>
    <string name="str_reminderStartTime">Start time</string>
    <string name="str_reminderEndTime">End time</string>
    <string name="str_when_start">When to start</string>
    <string name="str_when_end">When to end</string>
    <string name="reminderStartTime">09:00</string>
    <string name="reminderEndTime">10:00</string>
    <string name="reminderMethod">Pop-up / Alert</string>
    <string name="reminderBeforeMinutes">Calendar default</string>
    <string name="str_reminderType">Reminder type</string>
    <string name="select_reminder_type">Select reminder type</string>
    <string-array name="choose_reminder_type">
        <item>Pop-up / Alert</item>
        <item>Email</item>
        <item>SMS</item>
    </string-array>
    <string-array name="choose_reminder_type_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="str_reminderBefore">Reminder before</string>
    <string name="select_reminder_before">Select reminder before time</string>
    <string-array name="choose_reminder_before">
        <item>Calendar default</item>
        <item>At start time</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>2 days</item>
        <item>1 week</item>
    </string-array>
    <string-array name="choose_reminder_before_values" translatable="false">
        <item>-1</item>
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>720</item>
        <item>1440</item>
        <item>2880</item>
        <item>10080</item>
    </string-array>
    <string name="gui_category">User interface</string>
    <string name="enable_fast_scroll">Enable fast scroll</string>
    <string name="enable_fast_scroll_desc">Enable contact list fast scroll (restart app required)</string>
    <string name="app_theme_title">Application theme:</string>
    <string name="app_theme_title_param">Application theme: %s</string>
    <string name="app_theme_desc">Set the application theme: light or dark.</string>
    <string-array name="app_theme_labels">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="app_theme_values" translatable="false">
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="must_restart_application">To apply changes the application will try to restart itself, if the changes are not applied please restart manually the application!</string>
    <string name="request_permissions_title">Request required application permission.</string>
    <string name="request_permissions_desc">Touch this option to request all required application permissions to access CONTACTS, CALENDAR and EXTERNAL STORAGE.</string>
    <string name="about_text"><Data>
<![CDATA[
<b>Application version: %s</b><br/>
<b>What this program do?</b><br/>
<b>1.</b> This program scan your contacts from phonebook for birthdays.<br/>
The contacts are displayed alphabetically on a list with:<br/>
- contact photo;<br/>
- contact name;<br/>
- age;<br/>
- birthday, you can change the date format from settings, property \"Display date format\", default format is Year-Month-Day \"yyyy-MM-dd\", you can use MM/dd/yyyy or others, google for: \"java SimpleDateFormat Patterns\".<br/>
<b>2.</b> With this application you can add, edit and remove birthday information to a contact.<br/>
<b>3.</b> You can generate a reminder on your favorite calendar based on the settings made. <b>Firstly you should select one</b> from settings, \"Select calendar for reminders\".<br/>
See available reminder properties on the settings menu.<br/>
<br/>
<b>Note: This application is not a service, the reminders should be notified by your favorite calendar service!</b> So you should not worry about the RAM memory consumed by this application because you can close it after each use.<br/>
<br/>
<i>Observations:</i><br/>
The application was tested only with google contacts and calendars.<br/>
- When is started the application is loading all your available contacts, but the birthdays and images are loaded in background and appear when are loaded in this time this application could become lagging.<br/>
<br/>
This application use Treetog ArtWork\'s free icons from: <a href="http://www.iconarchive.com/artist/treetog.html">http://www.iconarchive.com/artist/treetog.html</a>.<br/>
The sources of this application are stored at: <a href="https://code.google.com/p/brgen/">https://code.google.com/p/brgen/</a>.<br/>
<br/>
Thank you for using this application!<br/>]]>
</Data></string>
    <string name="license">License</string>
    <string name="license_2_0">Apache License, v2.0</string>
    <string name="donate">Donate</string>
</resources>