<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/more"
        android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="always"
        android:title="">
        <menu>
            <item
                android:id="@+id/action_update_reminders"
                android:icon="@drawable/ic_menu_agenda"
                android:orderInCategory="100"
                app:showAsAction="never"
                android:title="@string/action_update_reminders"/>
            <item
                android:id="@+id/action_sync"
                android:icon="@drawable/ic_menu_sync"
                android:orderInCategory="101"
                app:showAsAction="never"
                android:title="@string/action_sync"/>
            <item
                android:id="@+id/action_reload"
                android:icon="@drawable/ic_menu_reload"
                android:orderInCategory="102"
                app:showAsAction="never"
                android:title="@string/action_reload"/>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_menu_settings"
                android:orderInCategory="103"
                app:showAsAction="never"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/action_back"
                android:icon="@drawable/ic_menu_revert"
                android:orderInCategory="104"
                app:showAsAction="never"
                android:title="@string/action_back"/>
            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_menu_close_clear_cancel"
                android:orderInCategory="105"
                app:showAsAction="never"
                android:title="@string/action_exit"/>
        </menu>
    </item>

</menu>