<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/aboutTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text" />
    </ScrollView>

    <Button
        android:id="@+id/license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/license" />
    
    <Button
        android:id="@+id/license20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/license_2_0" />

    <Button
        android:id="@+id/donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate" />

</LinearLayout>