<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ro.ciubex.brgen.form.CustomEditText
        android:id="@+id/contacts_filter_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter" />
    
    <CheckedTextView
        android:id="@+id/check_box_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkMark="@drawable/custom_checkbox"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="2dip"
        android:text="@string/select_all" />

    <ro.ciubex.brgen.list.ContactListView
        android:id="@+id/contacts_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fastScrollEnabled="false" />

    <TextView
        android:id="@+id/empty_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_contacts"
        android:visibility="gone" />

</LinearLayout>