<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/contactImage"
        android:layout_width="64dip"
        android:layout_height="64dip"
        android:contentDescription="@string/contact_image"
        android:focusable="false"
        android:gravity="left"
        android:scaleType="centerInside"
        android:src="@drawable/contact_image" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/firstItemText"
            style="@style/contactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/loading_wait"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/secondItemText"
                style="@style/contactDetails"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="false"
                android:gravity="left"
                android:text="@string/loading_wait"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/thirdItemText"
                style="@style/contactDetails"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="false"
                android:gravity="right"
                android:text="@string/loading_wait"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/image_check"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:contentDescription="@string/icon_checkbox"
        android:src="@drawable/checkbox_empty" />

</LinearLayout>